--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
-<div>
+<div style="display: flex; justify-content: center;">
 
-  <h1 style="display: flex; justify-content: center;">Hello World!</h1>
+  <h1>Hello World!</h1>
+  <h4>This is just the beginning...... and it feels really good!</h4>
 </div>
